force-app/main/default/objects/Demand_Account__x/fields/Ownership_Code__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Ownership Code</description>
    <externalDeveloperName>OwnershipCode</externalDeveloperName>
    <label>Ownership Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>01 - Individual Account</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>02 - Incorporated Business</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>03 - Government Account</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>04 - Non Profit Organization</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>05 - Financial Institution</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>06 - Foreign Individual</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>07 - Foreign Commercial</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>08 - Foreign Financial</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>80 - Manager Account</label>
            </value>
            <value>
                <fullName>81</fullName>
                <label>81 - Trustee - Business Only</label>
            </value>
            <value>
                <fullName>82</fullName>
                <label>82 - Government - State</label>
            </value>
            <value>
                <fullName>83</fullName>
                <label>83 - Government - Local</label>
            </value>
            <value>
                <fullName>84</fullName>
                <label>84 - Unincorporated Business</label>
            </value>
            <value>
                <fullName>85</fullName>
                <label>85 - Public Funds State</label>
            </value>
            <value>
                <fullName>86</fullName>
                <label>86 - Public Funds Local</label>
            </value>
            <value>
                <fullName>87</fullName>
                <label>87 - Joint - Personal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>