force-app/main/default/objects/Demand_Account__x/fields/Paper_Collection_Items__c.field-meta.xml
<CustomField>
    <fullName>Paper_Collection_Items__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>M ANZ ALS PAPER CR FEE</description>
    <externalDeveloperName>PaperCollectionItems</externalDeveloperName>
    <label>Paper Collection Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>