force-app/main/default/objects/Demand_Account__x/fields/Paper_Credits__c.field-meta.xml
<CustomField>
    <fullName>Paper_Credits__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>M ANZ ALS PAPER DR FEE</description>
    <externalDeveloperName>PaperCredits</externalDeveloperName>
    <label>Paper Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>