force-app/main/default/objects/Demand_Account__x/fields/Paper_Debits__c.field-meta.xml
<CustomField>
    <fullName>Paper_Debits__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>M ANZ ALS PAPER DR FEE</description>
    <externalDeveloperName>PaperDebits</externalDeveloperName>
    <label>Paper Debits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>