force-app/main/default/objects/Demand_Account__x/fields/Penalty_Interest__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Interest__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>M ANZ 71151 PENALTY FLAG</description>
    <externalDeveloperName>PenaltyInterest</externalDeveloperName>
    <label>Penalty Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>