force-app/main/default/objects/Demand_Account__x/fields/Penalty_Interest_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Interest_Applicable__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Penalty Interest Applicable</description>
    <externalDeveloperName>PenaltyInterestApplicable</externalDeveloperName>
    <label>Penalty Interest Applicable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>