force-app/main/default/objects/Demand_Account__x/fields/Percentage_Factor_2__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Factor_2__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Credit Factor</description>
    <externalDeveloperName>PercentageFactor2</externalDeveloperName>
    <label>Percentage Factor 2</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>