force-app/main/default/objects/Demand_Account__x/fields/Percentage_Factor_3__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Factor_3__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Credit Factor</description>
    <externalDeveloperName>PercentageFactor3</externalDeveloperName>
    <label>Percentage Factor 3</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>