force-app/main/default/objects/Demand_Account__x/fields/Point_Difference_Margin__c.field-meta.xml
<CustomField>
    <fullName>Point_Difference_Margin__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Point Difference (+/-) Margin</description>
    <externalDeveloperName>PointsDifferenceMargin</externalDeveloperName>
    <label>Point Difference (+/-) Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>