force-app/main/default/objects/Demand_Account__x/fields/Points_Difference_3__c.field-meta.xml
<CustomField>
    <fullName>Points_Difference_3__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Credit Points</description>
    <externalDeveloperName>PointsDifference3</externalDeveloperName>
    <label>Points Difference 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>