force-app/main/default/objects/Demand_Account__x/fields/Purpose_Code__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>M LRIS PURPOSE CODE</description>
    <externalDeveloperName>PurposeCode</externalDeveloperName>
    <label>Purpose Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>401</fullName>
                <label>401 - STOCKS AND DEBTORS</label>
            </value>
            <value>
                <fullName>402</fullName>
                <label>402 - TRADE FINANCE</label>
            </value>
            <value>
                <fullName>403</fullName>
                <label>403 - TREASURY/RISK MANAGEMENT</label>
            </value>
            <value>
                <fullName>404</fullName>
                <label>404 - FACTORING - SEC BY TRADE DEBTS</label>
            </value>
            <value>
                <fullName>405</fullName>
                <label>405 - FACTORING - PURCH OF TRADE DEBTS</label>
            </value>
            <value>
                <fullName>406</fullName>
                <label>406 - WHOLESALE FINANCE</label>
            </value>
            <value>
                <fullName>407</fullName>
                <label>407 - OTHER</label>
            </value>
            <value>
                <fullName>451</fullName>
                <label>451 - Plant/Factory Equipment</label>
            </value>
            <value>
                <fullName>452</fullName>
                <label>452 - Office Furniture and Equipment</label>
            </value>
            <value>
                <fullName>453</fullName>
                <label>453 - Office EDP equipment.</label>
            </value>
            <value>
                <fullName>454</fullName>
                <label>454 - Fixtures and Fittings.</label>
            </value>
            <value>
                <fullName>455</fullName>
                <label>455 - Mother vehicles. Includes cars, station wagons, utilities, trucks, ambulances and passenger vehicles.</label>
            </value>
            <value>
                <fullName>456</fullName>
                <label>456 - Other transport equipment. Includes motorcycles, trailers, caravans, trains, boats and planes.</label>
            </value>
            <value>
                <fullName>457</fullName>
                <label>457 - Repairs/maintenance of fixed assets.</label>
            </value>
            <value>
                <fullName>458</fullName>
                <label>458 - Other fixed assets.</label>
            </value>
            <value>
                <fullName>481</fullName>
                <label>481 - Purchase of business/franchise.</label>
            </value>
            <value>
                <fullName>482</fullName>
                <label>482 - Purchase of shares.</label>
            </value>
            <value>
                <fullName>483</fullName>
                <label>483 - Other investments</label>
            </value>
            <value>
                <fullName>500</fullName>
                <label>500 - BU CONST FIN FOR OFFICES</label>
            </value>
            <value>
                <fullName>501</fullName>
                <label>501 - Prime CBD offices</label>
            </value>
            <value>
                <fullName>502</fullName>
                <label>502 - Secondary CBD offices</label>
            </value>
            <value>
                <fullName>503</fullName>
                <label>503 - Suburban offices</label>
            </value>
            <value>
                <fullName>504</fullName>
                <label>504 - Country offices</label>
            </value>
            <value>
                <fullName>520</fullName>
                <label>520 - BU PURCH FIN FOR OFFICES</label>
            </value>
            <value>
                <fullName>521</fullName>
                <label>521 - Prime CBD offices</label>
            </value>
            <value>
                <fullName>522</fullName>
                <label>522 - Secondary CBD offices</label>
            </value>
            <value>
                <fullName>523</fullName>
                <label>523 - Suburban offices</label>
            </value>
            <value>
                <fullName>524</fullName>
                <label>524 - Country offices</label>
            </value>
            <value>
                <fullName>540</fullName>
                <label>540 - BU CONST FINANCE FOR INDUSTRIAL PROPS</label>
            </value>
            <value>
                <fullName>541</fullName>
                <label>541 - Large factories, plant, warehouse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>