force-app/main/default/objects/Demand_Account__x/fields/Refinance_Alteration_Addition_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Alteration_Addition_Indicator__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>M LRIS REFIN ALT ADD</description>
    <externalDeveloperName>RefinanceAlterationAdditionIndicator</externalDeveloperName>
    <label>Refinance Alteration/Addition Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>