force-app/main/default/objects/Demand_Account__x/fields/Service_Charge_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Type_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>M ANZ SER CHRG PAY METHOD</description>
    <externalDeveloperName>ServiceChargeTypeCode</externalDeveloperName>
    <label>Service Charge Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>00 - Use this code to exempt accounts from fees, e.g. INC accounts, Manager accounts</label>
            </value>
            <value>
                <fullName>71</fullName>
                <label>71 - Use this code to record non-standard fees for specific customers</label>
            </value>
            <value>
                <fullName>81</fullName>
                <label>81 - Default code for all sub-products</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>