force-app/main/default/objects/Demand_Account__x/fields/Start_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_1__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ANZ OD LIMIT START 4</description>
    <externalDeveloperName>StartDate1</externalDeveloperName>
    <label>Start Date 1</label>
    <type>Date</type>
</CustomField>