force-app/main/default/objects/Demand_Account__x/fields/Start_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_2__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ANZ OD LIMIT START 2</description>
    <externalDeveloperName>StartDate2</externalDeveloperName>
    <label>Start Date 2</label>
    <type>Date</type>
</CustomField>