force-app/main/default/objects/Demand_Account__x/fields/Start_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_3__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ANZ OD LIMIT START 3</description>
    <externalDeveloperName>StartDate3</externalDeveloperName>
    <label>Start Date 3</label>
    <type>Date</type>
</CustomField>