force-app/main/default/objects/Demand_Account__x/fields/Statement_Cycle_1__c.field-meta.xml
<CustomField>
    <fullName>Statement_Cycle_1__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Statement Cycle 1</description>
    <externalDeveloperName>StatementCycle1</externalDeveloperName>
    <label>Statement Cycle 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DA</fullName>
                <label>DA - Daily</label>
            </value>
            <value>
                <fullName>EM</fullName>
                <label>EM - Last business day of month</label>
            </value>
            <value>
                <fullName>IB</fullName>
                <label>IB - Every two months on nominated date</label>
            </value>
            <value>
                <fullName>IF</fullName>
                <label>IF - Fortnightly on nominated date</label>
            </value>
            <value>
                <fullName>IM</fullName>
                <label>IM - Monthly on nominated date</label>
            </value>
            <value>
                <fullName>IQ</fullName>
                <label>IQ - Quarterly on nominated date</label>
            </value>
            <value>
                <fullName>IS</fullName>
                <label>IS - Half-yearly on nominated date</label>
            </value>
            <value>
                <fullName>IW</fullName>
                <label>IW - Weekly on nominated date</label>
            </value>
            <value>
                <fullName>M1</fullName>
                <label>M1 - 1st Week of the Month - Monday</label>
            </value>
            <value>
                <fullName>M2</fullName>
                <label>M2 - 2nd Week of the Month - Monday</label>
            </value>
            <value>
                <fullName>M3</fullName>
                <label>M3 - 3rd Week of the Month - Monday</label>
            </value>
            <value>
                <fullName>M4</fullName>
                <label>M4 - 4th Week of the Month - Monday</label>
            </value>
            <value>
                <fullName>ML</fullName>
                <label>ML - Last Week of the Month - Monday</label>
            </value>
            <value>
                <fullName>U1</fullName>
                <label>U1 - 1st Week of the Month - Tuesday</label>
            </value>
            <value>
                <fullName>U2</fullName>
                <label>U2 - 2nd Week of the Month - Tuesday</label>
            </value>
            <value>
                <fullName>U3</fullName>
                <label>U3 - 3rd Week of the Month - Tuesday</label>
            </value>
            <value>
                <fullName>U4</fullName>
                <label>U4 - 4th Week of the Month - Tuesday</label>
            </value>
            <value>
                <fullName>UL</fullName>
                <label>UL - Last Week of the Month - Tuesday</label>
            </value>
            <value>
                <fullName>W1</fullName>
                <label>W1 - 1st Week of the Month - Wednesday</label>
            </value>
            <value>
                <fullName>W2</fullName>
                <label>W2 - 2nd Week of the Month - Wednesday</label>
            </value>
            <value>
                <fullName>W3</fullName>
                <label>W3 - 3rd Week of the Month - Wednesday</label>
            </value>
            <value>
                <fullName>W4</fullName>
                <label>W4 - 4th Week of the Month - Wednesday</label>
            </value>
            <value>
                <fullName>WL</fullName>
                <label>WL - Last Week of the Month - Wednesday</label>
            </value>
            <value>
                <fullName>T1</fullName>
                <label>T1 - 1st Week of the Month - Thursday</label>
            </value>
            <value>
                <fullName>T2</fullName>
                <label>T2 - 2nd Week of the Month - Thursday</label>
            </value>
            <value>
                <fullName>T3</fullName>
                <label>T3 - 3rd Week of the Month - Thursday</label>
            </value>
            <value>
                <fullName>T4</fullName>
                <label>T4 - 4th Week of the Month - Thursday</label>
            </value>
            <value>
                <fullName>TL</fullName>
                <label>TL - Last Week of the Month - Thursday</label>
            </value>
            <value>
                <fullName>F1</fullName>
                <label>F1 - 1st Week of the Month - Friday</label>
            </value>
            <value>
                <fullName>F2</fullName>
                <label>F2 - 2nd Week of the Month - Friday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>