force-app/main/default/objects/Demand_Account__x/fields/Tiered_Credit_Int_Percentage_Factor2__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Credit_Int_Percentage_Factor2__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CACHE</complianceGroup>
    <description>Credit Factor</description>
    <externalDeveloperName>TieredCreditInterestPercentageFactor2</externalDeveloperName>
    <label>Tiered Credit Int - Percentage Factor 2</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>