force-app/main/default/objects/Demand_Account__x/fields/Tiered_Credit_Int_Points_Diff3__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Credit_Int_Points_Diff3__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CACHE</complianceGroup>
    <description>Credit Factor</description>
    <externalDeveloperName>TieredCreditInterestPointsDifference3</externalDeveloperName>
    <label>Tiered Credit Int - Points Diff 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>