force-app/main/default/objects/Demand_Account__x/fields/Waive_Code__c.field-meta.xml
<CustomField>
    <fullName>Waive_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Charge Cycle Code</description>
    <externalDeveloperName>WaiveCode</externalDeveloperName>
    <label>Waive Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>00 - Default - do not waive. (Fee is charged according to Account Service Charge Code).</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>01 - Waive fee for one cycle. After fee has been waived for one cycle, CACHE automatically changes the code to &apos;00&apos;.</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>02 - Waive fee permanently.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>